fixed hero gallery misalignment

--- a/sass/_gallerys.scss
+++ b/sass/_gallerys.scss
@@ -21,14 +21,14 @@
             grid-row: 1 / span 3;
             grid-column: 3 / span 3;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 2 / span 2;
+                grid-row: 1 / span 2;
             }
         }
         &--3 {
             grid-row: 1 / span 2;
             grid-column: 6 / span 1;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 9 / span 2;
+                grid-row: 8 / span 2;
                 grid-column: 2 / span 1;
             }
         }
@@ -36,7 +36,7 @@
             grid-row: 1 / span 2;
             grid-column: 7 / span 2;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 9 / span 2;
+                grid-row: 8 / span 2;
                 grid-column: 3 / span 2;
             }
         }
@@ -48,7 +48,7 @@
             grid-row: 4 / span 2;
             grid-column: 3 / span 2;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 4 / span 2;
+                grid-row: 3 / span 2;
                 grid-column: 4 / span 1;
             }
         }
@@ -56,7 +56,7 @@
             grid-row: 4 / span 1;
             grid-column: 5 / span 1;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 9 / span 1;
+                grid-row: 8 / span 1;
                 grid-column: 1 / span 1;
             }
         }
@@ -64,7 +64,7 @@
             grid-row: 3 / span 2;
             grid-column: 6 / span 2;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 11 / span 2;
+                grid-row: 10 / span 2;
                 grid-column: 1 / span 2;
             }
         }
@@ -72,7 +72,7 @@
             grid-row: 3 / span 3;
             grid-column: 8 / span 1;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 4 / span 2;
+                grid-row: 3 / span 2;
                 grid-column: 3 / span 1;
             }
         }
@@ -80,7 +80,7 @@
             grid-row: 6 / span 2;
             grid-column: 1 / span 1;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 10 / span 1;
+                grid-row: 9 / span 1;
                 grid-column: 1 / span 1;
             }
         }
@@ -95,7 +95,7 @@
             grid-row: 6 / span 2;
             grid-column: 4 / span 1;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 6 / span 3;
+                grid-row: 5 / span 3;
                 grid-column: 3 / span 2;
             }
         }
@@ -103,7 +103,7 @@
             grid-row: 5 / span 3;
             grid-column: 5 / span 3;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 11 / span 2;
+                grid-row: 10 / span 2;
                 grid-column: 4 / span 1;
             }
         }
@@ -111,7 +111,7 @@
             grid-row: 6 / span 2;
             grid-column: 8 / span 1;
             @media only screen and (max-width: $bp-large) {
-                grid-row: 11 / span 2;
+                grid-row: 10 / span 2;
                 grid-column: 3 / span 1;
             }
         }
